# data-capsule-deep-piste

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  docker-build.sh  docker-run.sh  pyproject.toml
.kaggle/: .gitignore
data/: .gitignore
notebooks/: 01_download_data.ipynb  02.5_preprocessing.ipynb  02_pytorch_basics.ipynb  03_resnet18_breast_density.ipynb  04_gmic_architecture.ipynb  05_gmic_finetuning.ipynb  06_risk_control_abstention.ipynb  course_utils.py  preprocess_min.py
